[package]
name = "minecraft-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
openssl = "0.10.52"
rand = "0.8.5"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
uuid = "1.3.2"
aes = "0.7"
cfb8 = "0.7"
mojang-api = "0.6.1"
tokio-compat = "0.1.6"
reqwest = "0.11.17"
